pxc/tests/test_07_constr/glothr.px
namespace glothr;
import test_common "";

struct foo {
  int x;
}

foo f; // error: foo is not threaded
println(f.x);
